Code refactor for issues and docker file added