@@ -1,5 +1,6 @@
 package org.fub.configuration;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.AllArgsConstructor;
 import org.fub.filters.JWTTokenValidatorFilter;
 import org.fub.utils.JWTTokenUtils;
@@ -19,8 +20,10 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CommonsRequestLoggingFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -29,10 +32,17 @@ public class SecurityConfigurationClass {
 
     private final JWTTokenUtils utils;
 
+    CustomAccessDeniedHandler accessDeniedHandler;
 
     @Bean
     ModelMapper modelMapper() {
         return new ModelMapper();
+    }
+
+
+    @Bean
+    ObjectMapper defaultObjectMapper() {
+        return new ObjectMapper();
     }
 
     @Bean
@@ -43,9 +53,10 @@ public class SecurityConfigurationClass {
                         .anyRequest().authenticated());
         http.formLogin(AbstractHttpConfigurer::disable);
         http.httpBasic(AbstractHttpConfigurer::disable);
-        http.addFilterBefore(new JWTTokenValidatorFilter(utils), UsernamePasswordAuthenticationFilter.class);
+        http.addFilterBefore(new JWTTokenValidatorFilter(utils, defaultObjectMapper()), UsernamePasswordAuthenticationFilter.class);
         http.sessionManagement(smc -> smc.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         http.csrf(AbstractHttpConfigurer::disable);
+        http.exceptionHandling(e->e.accessDeniedHandler(accessDeniedHandler));
         return http.build();
     }
 
@@ -66,8 +77,8 @@ public class SecurityConfigurationClass {
                 "http://localhost:3000",
                 "https://master.de3avym2ahnav.amplifyapp.com"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE","PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -81,5 +92,16 @@ public class SecurityConfigurationClass {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public CommonsRequestLoggingFilter logFilter() {
+        CommonsRequestLoggingFilter filter = new CommonsRequestLoggingFilter();
+        filter.setIncludeQueryString(true);
+//        filter.setIncludePayload(true);
+        filter.setMaxPayloadLength(10000);
+        filter.setIncludeHeaders(true);
+        filter.setAfterMessagePrefix("REQUEST DATA: ");
+        return filter;
     }
 }
